Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98387

ScrollBar not resizing to left correctly when window is extended left

    XMLWordPrintable

Details

    • ce441f8193 (qt/qtdeclarative/dev) ce441f8193 (qt/tqtc-qtdeclarative/dev)

    Description

      When a Scrollbar's size is set to scale inversely with window size directly or indirectly, if the window is resized to the left the size of the scrollbar does not update correctly. Clicking the scrollbar after resizing the window results in the scrollbar instantly resizing to the correct size.

      Steps to reproduce:

      1. Run the attached example
      2. Move the scroll bar to the right side of the window
      3. Increase the size of the window by resizing the left edge

      Attachments

        1. main.qml
          2 kB
        2. repro_win10.mkv
          2.58 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            soarmin Soheil Armin
            kevin.zhang Kevin Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes