Fix visualSize calculation when width is changing

Position of the ScrollBar handle is fixed when it's being resized except
when it's on the extreme side (position + size = 1). In this case, when
the width is growing, the handle size should grow and the position
should decrease as a result.

Fixes: QTBUG-98387
Change-Id: Ibb18c03a741bb4e5a19425a57f14a68d27d68d12
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>